accessibility-fix: improve contrast for btn-secondary button links

--- a/css/style.css
+++ b/css/style.css
@@ -43,18 +43,18 @@ body {
 
   .btn-secondary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #be99e6;
+    --bs-btn-bg: #5A287D;
     --bs-btn-border-color: #3c1053;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #3c1053;
     --bs-btn-hover-border-color: #3c1053;
     --bs-btn-focus-shadow-rgb: 130,138,145;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #be99e6;
+    --bs-btn-active-bg: #5A287D;
     --bs-btn-active-border-color: #3c1053;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #be99e6;
+    --bs-btn-disabled-bg: #5A287D;
     --bs-btn-disabled-border-color: #6c757d;
 }
   
